force-app/main/default/objects/Animal__c/fields/Adopted__c.field-meta.xml
<CustomField>
    <fullName>Adopted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the animal is adopted or not.</description>
    <inlineHelpText>Check this box if the animal is adopted.</inlineHelpText>
    <label>Adopted</label>
    <type>Checkbox</type>
</CustomField>