force-app/main/default/objects/Animal__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Birth Date of the Animal.</description>
    <inlineHelpText>Please enter the birth date of the animal. This field can be blank if the birth date is unknown.</inlineHelpText>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>