force-app/main/default/objects/Animal__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <description>Breed of the animal</description>
    <inlineHelpText>Please enter the breed of the animal.
If the animal is a mixed breed, please enter all of them separated by semi-colons.
If the breed is unknown, please enter &quot;unknown&quot;</inlineHelpText>
    <label>Breed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>