force-app/main/default/objects/Animal__c/fields/Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Vaccinated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Vaccination status of the animal.</description>
    <inlineHelpText>Please check this box if the animal is vaccinated.
If the vaccination status is unknown, please leave the box unchecked.</inlineHelpText>
    <label>Vaccinated</label>
    <type>Checkbox</type>
</CustomField>